# Melody

./: .gitignore  Melody.hyproj  README.md
data/: Items.data
data/Atlases/: Atlases.data  TileSets.data
data/Audio/: Audio.data
lib/NESController/: CMakeLists.txt  NESController.cpp  SerialPort.cpp  pch.h
meta/Source/: CMakeLists.txt  Compositorium.cpp  Compositorium.h  ControlPanel.cpp  ControlPanel.h  CtrlPanel.cpp  CtrlPanel.h  FightStick.cpp  FightStick.h  Melody.cpp  Melody.h  main.cpp  pch.h
meta/Source/Collection/: Collection.cpp  Collection.h
meta/Source/Components/: Brb.cpp  Brb.h  FightStick.cpp  FightStick.h  HeartBeat.cpp  HeartBeat.h  IComponent.cpp  IComponent.h  LiveSplit.cpp  LiveSplit.h  Message.cpp  Message.h  MessageCycle.cpp  MessageCycle.h  Monitor.cpp  Monitor.h  NESController.cpp  NESController.h  VgMusic.cpp  VgMusic.h
meta/Source/Components/Code/: Code.cpp  Code.h  MessageCycle.cpp  MessageCycle.h
meta/Source/Components/Crt/: Channel.cpp  Channel.h  Crt.cpp  Crt.h
meta/Source/Components/Crt/Channels/: Channel.cpp  Channel.h  Music.cpp  Music.h
meta/Source/Components/GameBrowser/: BrowsePage.cpp  BrowsePage.h  ConsolePage.cpp  ConsolePage.h  EditPage.cpp  EditPage.h  GameBrowser.cpp  GameBrowser.h
meta/Source/Components/InputViewer/: Dpad.cpp  Dpad.h  InputViewer.cpp  InputViewer.h
meta/Source/Components/InputViewer/Controllers/: IController.cpp  IController.h  NES.cpp  NES.h  SerialPort.cpp  SerialPort.h  StarCitizen.cpp  StarCitizen.h  StreetFighter.cpp  StreetFighter.h
meta/Source/Components/LowerThird/: LowerThird.cpp  LowerThird.h  MessageCycle.cpp  MessageCycle.h
meta/Source/Components/NowPlaying/: Docket.cpp  Docket.h  NowPlaying.cpp  NowPlaying.h
meta/Source/Compositorium/: Compositorium.cpp  Compositorium.h
meta/Source/Scenes/: Break.cpp  Break.h  CtrlPanel.cpp  CtrlPanel.h  IScene.cpp  IScene.h  Intro.cpp  Intro.h  LowerThird.cpp  LowerThird.h  Outro.cpp  Outro.h  Root.cpp  Root.h
meta/Source/Twitch/: EventSub.cpp  EventSub.h  TwitchApi.cpp  TwitchApi.h
meta/Source/Wheel/: WeightTable.cpp  WeightTable.h  Wheel.cpp  Wheel.h  WheelInit.h
meta/Source/_hy_/: NewEntity.cpp  NewEntity.h  hy_MusicPlayer.cpp  hy_MusicPlayer.h  hy_Television.cpp  hy_Television.h
